fixed play button flicker

--- a/src/app/routes/before-launch/components/play-invitation/play-invitation.component.css
+++ b/src/app/routes/before-launch/components/play-invitation/play-invitation.component.css
@@ -91,14 +91,12 @@ a {
   padding: 1rem 5rem;
   font: 3.03125rem 'Bangers';
   color: white;
-  transform: rotate(2deg) translateX(-1.5rem) scale(0);
   box-shadow: 6px 9px 4px rgba(0,0,0,0.4);
   border-radius: 0.75rem 1.5rem 0.75rem 1.25rem;
   position: relative;
   transform-style: preserve-3d;
   border: none;
   cursor: pointer;
-  transition: all 0.2s ease-in;
   width: max-content;
   align-self: center;
   text-decoration: none;
